Mejroa de las aniamciones y nueva animacion de puño y mordidad

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -143,7 +143,7 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
+ContentBrowserTab1.SelectedPaths=/Game/AI
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -175,7 +175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=
+ContentBrowserDrawer.SelectedPaths=/Game/AI
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1232,12 +1232,12 @@ Voice.TimeStamp=2023.10.07-13.13.39
 Voice.LastCompileMethod=External
 MovieSceneCapture.TimeStamp=2023.10.07-13.13.07
 MovieSceneCapture.LastCompileMethod=External
-SkeletonEditor.TimeStamp=2023.09.30-08.40.56
-SkeletonEditor.LastCompileMethod=Unknown
-PinnedCommandList.TimeStamp=2023.09.30-08.40.56
-PinnedCommandList.LastCompileMethod=Unknown
-AnimationEditor.TimeStamp=2023.09.30-08.40.53
-AnimationEditor.LastCompileMethod=Unknown
+SkeletonEditor.TimeStamp=2023.10.07-13.13.24
+SkeletonEditor.LastCompileMethod=External
+PinnedCommandList.TimeStamp=2023.10.07-13.13.13
+PinnedCommandList.LastCompileMethod=External
+AnimationEditor.TimeStamp=2023.10.07-13.12.25
+AnimationEditor.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2023.10.07-13.13.22
 SequencerWidgets.LastCompileMethod=External
 Bridge.TimeStamp=2023.10.07-16.05.37
@@ -1251,34 +1251,33 @@ D3D11RHI.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
-OpenAssetsAtExit=/Game/Enemy/BP_TankEnemySpawn.BP_TankEnemySpawn
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
-OpenAssetsAtExit=/Game/Chekpoint/Chekpoint.Chekpoint
+OpenAssetsAtExit=/Game/Enemy/Enemy_Health.Enemy_Health
+OpenAssetsAtExit=/Game/AI/SK_Mannequin_Montage_VampireBite.SK_Mannequin_Montage_VampireBite
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Chekpoint/Chekpoint
-MRUItem1=/Game/Enemy/BP_EnemySpawn
-MRUItem2=/Game/Enemy/BP_Spawner
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem4=/Game/Enemy/BP_TankEnemySpawn
-MRUItem5=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem8=/Game/Enemy/Enemy_Health
-MRUItem9=/Game/Enemy/Flying_Back_Death
-MRUItem10=/Game/AI/Punching_AI
-MRUItem11=/Game/AI/Walk
-MRUItem12=/Game/AI/Ai_anim_BP
-MRUItem13=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem14=/Game/AI/Punching
-MRUItem15=/Game/Animation/Rolling
-MRUItem16=/Game/Animation/Idle_UE
-MRUItem17=/Game/Animation/Stand_To_Roll__1__Skeleton
-MRUItem18=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem19=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem0=/Game/AI/VampiricBite_UE
+MRUItem1=/Game/AI/Punching_UE
+MRUItem2=/Game/Animation/Esquivar
+MRUItem3=/Game/AI/Punching_1_UE
+MRUItem4=/Game/AI/Punching_AI
+MRUItem5=/Game/Enemy/BP_TankEnemySpawn
+MRUItem6=/Game/Enemy/Enemy_Health
+MRUItem7=/Game/Enemy/BP_SpeedEnemySpawn
+MRUItem8=/Game/Enemy/BP_EnemySpawn
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem10=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem11=/Game/Chekpoint/Chekpoint
+MRUItem12=/Game/Enemy/BP_Spawner
+MRUItem13=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem14=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem15=/Game/Enemy/Flying_Back_Death
+MRUItem16=/Game/AI/Walk
+MRUItem17=/Game/AI/Ai_anim_BP
+MRUItem18=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem19=/Game/AI/Punching
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2248,6 +2247,59 @@ SphereComponent.Tags=True
 SphereComponent.ComponentReplication=True
 SphereComponent.Cooking=True
 SphereComponent.Events=True
+BP_SpeedEnemySpawn_C.TransformCommon=True
+BP_SpeedEnemySpawn_C.Animation=True
+BP_SpeedEnemySpawn_C.Mesh=True
+BP_SpeedEnemySpawn_C.Tick=True
+BP_SpeedEnemySpawn_C.ComponentTick=True
+BP_SpeedEnemySpawn_C.Clothing=True
+BP_SpeedEnemySpawn_C.LeaderPoseComponent=True
+BP_SpeedEnemySpawn_C.Physics=True
+BP_SpeedEnemySpawn_C.Collision=True
+BP_SpeedEnemySpawn_C.AnimationRig=True
+BP_SpeedEnemySpawn_C.Lighting=True
+BP_SpeedEnemySpawn_C.Deformer=True
+BP_SpeedEnemySpawn_C.SkinWeights=True
+BP_SpeedEnemySpawn_C.HLOD=True
+BP_SpeedEnemySpawn_C.Rendering=True
+BP_SpeedEnemySpawn_C.PathTracing=True
+BP_SpeedEnemySpawn_C.Mobile=True
+BP_SpeedEnemySpawn_C.Navigation=True
+BP_SpeedEnemySpawn_C.RayTracing=True
+BP_SpeedEnemySpawn_C.VirtualTexture=True
+BP_SpeedEnemySpawn_C.Tags=True
+BP_SpeedEnemySpawn_C.AssetUserData=True
+BP_SpeedEnemySpawn_C.Replication=True
+BP_SpeedEnemySpawn_C.ComponentReplication=True
+BP_SpeedEnemySpawn_C.Activation=True
+BP_SpeedEnemySpawn_C.Variable=True
+BP_SpeedEnemySpawn_C.Cooking=True
+BP_SpeedEnemySpawn_C.Character Movement (General Settings)=True
+BP_SpeedEnemySpawn_C.Character Movement: Walking=True
+BP_SpeedEnemySpawn_C.Character Movement: Jumping / Falling=True
+BP_SpeedEnemySpawn_C.Character Movement (Networking)=True
+BP_SpeedEnemySpawn_C.Character Movement: Swimming=True
+BP_SpeedEnemySpawn_C.Character Movement: Flying=True
+BP_SpeedEnemySpawn_C.Character Movement: Custom Movement=True
+BP_SpeedEnemySpawn_C.Character Movement (Rotation Settings)=True
+BP_SpeedEnemySpawn_C.Character Movement: Physics Interaction=True
+BP_SpeedEnemySpawn_C.Character Movement=True
+BP_SpeedEnemySpawn_C.Character Movement: Avoidance=True
+BP_SpeedEnemySpawn_C.RootMotion=True
+BP_SpeedEnemySpawn_C.Character Movement: NavMesh Movement=True
+BP_SpeedEnemySpawn_C.NavMovement=True
+BP_SpeedEnemySpawn_C.Velocity=True
+BP_SpeedEnemySpawn_C.PlanarMovement=True
+BP_SpeedEnemySpawn_C.MovementComponent=True
+BP_SpeedEnemySpawn_C.Shape=True
+BP_SpeedEnemySpawn_C.Character=True
+BP_SpeedEnemySpawn_C.Camera=True
+BP_SpeedEnemySpawn_C.Pawn=True
+BP_SpeedEnemySpawn_C.Actor=True
+BP_SpeedEnemySpawn_C.Input=True
+BP_SpeedEnemySpawn_C.WorldPartition=True
+BP_SpeedEnemySpawn_C.Events=True
+BP_SpeedEnemySpawn_C.Materials=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2425,19 +2477,20 @@ SphereComponent="\"Object\" "
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
 
 [MessageLog]
-LastLogListing=PIE
+LastLogListing=FBXImport
 
 [DetailCategoriesAdvanced]
 AnimSequence.Animation=True
 AnimMontage.Animation=True
 BP_ThirdPersonCharacter_C.Animation=True
 PropertyWrapper.Variable=False
+FbxImportUI.Animation=True
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_Spawner_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-BP_EnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+BP_EnemySpawn_C=
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 Ai_anim_BP_C=
 Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2473,6 +2526,7 @@ BP_TankEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 Chekpoint_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+BP_SpeedEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2486,13 +2540,15 @@ K2Node=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 /Game/Enemy/BP_Spawner.BP_Spawner=0
 /Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny=0
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter=0
-/Game/AI/Punching_AI.Punching_AI=1
+/Game/AI/Punching_AI.Punching_AI=0
 /Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood=0
 /Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood=0
 /Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics=0
 /Game/Enemy/Enemy_Health.Enemy_Health=0
 /Game/Enemy/BP_TankEnemySpawn.BP_TankEnemySpawn=0
 /Game/Chekpoint/Chekpoint.Chekpoint=0
+/Game/Enemy/BP_SpeedEnemySpawn.BP_SpeedEnemySpawn=1
+/Game/AI/SK_Mannequin_Montage_VampireBite.SK_Mannequin_Montage_VampireBite=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2742,7 +2798,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=196.800 Y=83.200
-WindowSize=X=1288.000 Y=728.000
+WindowSize=X=1289.600 Y=729.600
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
