Cambios y bug fixing de lo anterior

--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -11,5 +11,5 @@ NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="Boss",DevComment="The final enemy of the stage")
 +GameplayTagList=(Tag="Enemies",DevComment="All the enemies")
 +GameplayTagList=(Tag="Player",DevComment="Main charcter collision box")
-+GameplayTagList=(Tag="Sword",DevComment="The collisioner that the sword has")
++GameplayTagList=(Tag="Player.Sword",DevComment="Espada")
 
