Sword atack 100% finished
Pude hacer que solo pueda pegar con la espada GG

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -143,7 +143,7 @@ bUseTreeViewForAnimationCurves=False
 AnimationCurveGroupingDelimiters="._/|\\"
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Enemy
+ContentBrowserTab1.SelectedPaths=/Game/AI/Sword
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.FavoritesAreaExpanded=False
 ContentBrowserTab1.PathAreaExpanded=True
@@ -1252,38 +1252,32 @@ D3D11RHI.LastCompileMethod=Unknown
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/AI/Sword/Slash.Slash
+OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
 OpenAssetsAtExit=/Game/AI/Sword/Sword.Sword
 OpenAssetsAtExit=/Game/AI/Sword/Sword_Skeleton.Sword_Skeleton
-OpenAssetsAtExit=/Game/Characters/Mannequins/Meshes/SKM_Manny.SKM_Manny
-OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
-OpenAssetsAtExit=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton.SK_Mannequin_Skeleton
-OpenAssetsAtExit=/Game/Characters/Mannequins/Meshes/SK_Mannequin.SK_Mannequin
-OpenAssetsAtExit=/Game/Enemy/FlyingBack.FlyingBack
-OpenAssetsAtExit=/Game/AI/Sword/SwordNotify.SwordNotify
-OpenAssetsAtExit=/Game/Enemy/BP_SpeedEnemySpawn.BP_SpeedEnemySpawn
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Enemy/FlyingBack
-MRUItem1=/Game/Enemy/BP_SpeedEnemySpawn
-MRUItem2=/Game/Enemy/DeathDie
-MRUItem3=/Game/Enemy/Death
-MRUItem4=/Game/AI/Sword/Slash
-MRUItem5=/Game/AI/Sword/SwordNotify
-MRUItem6=/Game/AI/Sword/SwordEvent
-MRUItem7=/Game/AI/Sword/SlashSw
-MRUItem8=/Game/AI/Sword/Stable_Sword_Outward_Slash__1_
-MRUItem9=/Game/Characters/Mannequins/Meshes/SK_Mannequin
-MRUItem10=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
-MRUItem11=/Game/AI/Sword/SwordSlash
-MRUItem12=/Game/Enemy/BP_EnemySpawn
-MRUItem13=/Game/Characters/Mannequins/Meshes/SKM_Manny
-MRUItem14=/Game/AI/Sword/Sword_Skeleton
-MRUItem15=/Game/AI/Sword/Sword
-MRUItem16=/Game/Animation/Sword_Slash
-MRUItem17=/Game/Animation/Stable_Sword_Outward_Slash
-MRUItem18=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem19=/Game/AI/VampiricBite_UE
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem1=/Game/AI/Sword/Sword_Skeleton
+MRUItem2=/Game/AI/Sword/Sword
+MRUItem3=/Game/Enemy/BP_EnemySpawn
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/Enemy/FlyingBack
+MRUItem6=/Game/Enemy/BP_SpeedEnemySpawn
+MRUItem7=/Game/Enemy/DeathDie
+MRUItem8=/Game/Enemy/Death
+MRUItem9=/Game/AI/Sword/Slash
+MRUItem10=/Game/AI/Sword/SwordNotify
+MRUItem11=/Game/AI/Sword/SwordEvent
+MRUItem12=/Game/AI/Sword/SlashSw
+MRUItem13=/Game/AI/Sword/Stable_Sword_Outward_Slash__1_
+MRUItem14=/Game/Characters/Mannequins/Meshes/SK_Mannequin
+MRUItem15=/Game/Characters/Mannequin_UE4/Meshes/SK_Mannequin_Skeleton
+MRUItem16=/Game/AI/Sword/SwordSlash
+MRUItem17=/Game/Characters/Mannequins/Meshes/SKM_Manny
+MRUItem18=/Game/Animation/Sword_Slash
+MRUItem19=/Game/Animation/Stable_Sword_Outward_Slash
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2348,8 +2342,8 @@ PersonaPreviewSceneDescription.Animation Blueprint=True
 SkeletalMesh.LevelOfDetail=True
 
 [DetailPropertyExpansion]
-PreviewMeshCollection="\"Object\" "
-DataAsset="\"Object\" "
+PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 Object="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
@@ -2362,9 +2356,9 @@ AnimMontage="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.Ti
 AnimCompositeBase="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
 CapsuleComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Tags.ComponentTags\" "
 ShapeComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Tags.ComponentTags\" "
-PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+PrimitiveComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Tags.ComponentTags\" "
+SceneComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Tags.ComponentTags\" "
+ActorComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[2]\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" \"Object.Tags.ComponentTags\" "
 SpringArmComponent="\"Object\" "
 GeneralProjectSettings="\"Object\" "
 CryptoKeysSettings="\"Object\" "
@@ -2470,9 +2464,9 @@ K2Node_Switch="\"Object\" "
 K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
 BP_Spawner_C=
-SkeletalMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-SkinnedMeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance\" \"Object.Tags.ComponentTags\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
 PawnSensingComponent="\"Object\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -2542,7 +2536,7 @@ InputTriggerTap="\"Object\" "
 InputTriggerPulse="\"Object\" "
 RecastNavMesh="\"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" "
 NavigationData="\"Object.Display.TileGenerationDebug\" \"Object.Generation.NavMeshResolutionParams\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[0]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[1]\" \"Object.Generation.NavMeshResolutionParams.NavMeshResolutionParams[2]\" "
-BP_EnemySpawn_C="\"Object.Tags\" "
+BP_EnemySpawn_C=
 Character=
 Pawn=
 BP_ThirdPersonCharacter_C=
@@ -2566,15 +2560,15 @@ SkeletalMeshComponent.SkeletalMesh=False
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BP_Spawner_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-BP_EnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags
+BP_EnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 Ai_anim_BP_C=
 Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent
+SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=
@@ -2585,11 +2579,11 @@ K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 EdGraphNode=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 PlayerController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-CapsuleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+CapsuleComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
