No es nada basicamente se me abrio y cerro el programa

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1250,12 +1250,7 @@ D3D11RHI.TimeStamp=2023.05.18-10.23.38
 D3D11RHI.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
-OpenAssetsAtExit=/Game/AI/Sword/Sword.Sword
-OpenAssetsAtExit=/Game/AI/Sword/Sword_Skeleton.Sword_Skeleton
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
+CleanShutdown=True
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
@@ -3066,8 +3061,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=196.800 Y=83.200
-WindowSize=X=1289.600 Y=729.600
+ScreenPosition=X=196.000 Y=83.000
+WindowSize=X=1290.000 Y=730.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -3099,8 +3094,8 @@ Project=B:/UE_5.2/
 
 [Python]
 LastDirectory=
-RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 RecentsFiles=B:/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
+RecentsFiles=C:/Program Files/Epic Games/UE_5.2/Engine/Plugins/Animation/ControlRig/Content/Python/init_unreal.py
 
 [WidgetTemplatesExpanded]
 Common=False
