Cambio de animacion de bloqueo y ataque
Cambie la animacion de bloqeuo de raton izquierdo a raton dercho viseversa con la de ataque

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1250,29 +1250,22 @@ D3D11RHI.TimeStamp=2023.05.18-10.23.38
 D3D11RHI.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
-OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
-OpenAssetsAtExit=/Game/Enemy/Enemy_Health.Enemy_Health
-OpenAssetsAtExit=/Game/Chekpoint/Chekpoint.Chekpoint
-OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Input/IMC_Default
-MRUItem1=/Game/ThirdPerson/Input/Actions/IA_Sprint
-MRUItem2=/Game/Animation/Running_UE
-MRUItem3=/Game/Animation/Esquivar
-MRUItem4=/Game/Animation/Idle_UE
-MRUItem5=/Game/Chekpoint/Chekpoint
-MRUItem6=/Game/Enemy/Enemy_Health
-MRUItem7=/Game/Enemy/BP_EnemySpawn
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem9=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem10=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/ThirdPerson/Input/IMC_Default
+MRUItem2=/Game/ThirdPerson/Input/Actions/IA_Sprint
+MRUItem3=/Game/Animation/Running_UE
+MRUItem4=/Game/Animation/Esquivar
+MRUItem5=/Game/Animation/Idle_UE
+MRUItem6=/Game/Chekpoint/Chekpoint
+MRUItem7=/Game/Enemy/Enemy_Health
+MRUItem8=/Game/Enemy/BP_EnemySpawn
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem10=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem11=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
 MRUItem12=/Game/AI/Sword/Slash
 MRUItem13=/Game/AI/Sword/Sword_Skeleton
 MRUItem14=/Game/AI/Sword/Sword
