--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1252,35 +1252,30 @@ D3D11RHI.LastCompileMethod=Unknown
 [AssetEditorSubsystem]
 CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/Hunt_For_Blood.Hunt_For_Blood
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/UI_HuntForBlood.UI_HuntForBlood
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
-OpenAssetsAtExit=/Game/Enemy/BP_EnemySpawn.BP_EnemySpawn
-OpenAssetsAtExit=/Game/Enemy/Enemy_Health.Enemy_Health
-OpenAssetsAtExit=/Game/Chekpoint/Chekpoint.Chekpoint
 OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Input/IMC_Default
-MRUItem1=/Game/ThirdPerson/Input/Actions/IA_Sprint
-MRUItem2=/Game/Animation/Running_UE
-MRUItem3=/Game/Animation/Esquivar
-MRUItem4=/Game/Animation/Idle_UE
-MRUItem5=/Game/Chekpoint/Chekpoint
-MRUItem6=/Game/Enemy/Enemy_Health
-MRUItem7=/Game/Enemy/BP_EnemySpawn
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem9=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem10=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem12=/Game/AI/Sword/Slash
-MRUItem13=/Game/AI/Sword/Sword_Skeleton
-MRUItem14=/Game/AI/Sword/Sword
-MRUItem15=/Game/Enemy/FlyingBack
-MRUItem16=/Game/Enemy/BP_SpeedEnemySpawn
-MRUItem17=/Game/Enemy/DeathDie
-MRUItem18=/Game/Enemy/Death
-MRUItem19=/Game/AI/Sword/SwordNotify
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem1=/Game/ThirdPerson/Input/Actions/IA_Look
+MRUItem2=/Game/ThirdPerson/Input/IMC_Default
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/ThirdPerson/Input/Actions/IA_Sprint
+MRUItem5=/Game/Animation/Running_UE
+MRUItem6=/Game/Animation/Esquivar
+MRUItem7=/Game/Animation/Idle_UE
+MRUItem8=/Game/Chekpoint/Chekpoint
+MRUItem9=/Game/Enemy/Enemy_Health
+MRUItem10=/Game/Enemy/BP_EnemySpawn
+MRUItem11=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem12=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem13=/Game/AI/Sword/Slash
+MRUItem14=/Game/AI/Sword/Sword_Skeleton
+MRUItem15=/Game/AI/Sword/Sword
+MRUItem16=/Game/Enemy/FlyingBack
+MRUItem17=/Game/Enemy/BP_SpeedEnemySpawn
+MRUItem18=/Game/Enemy/DeathDie
+MRUItem19=/Game/Enemy/Death
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2365,6 +2360,34 @@ InputAction.Action=True
 InputAction.Input=True
 InputMappingContext.Mappings=True
 InputMappingContext.Description=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.ComponentTick=True
+CameraComponent.PostProcess=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
+CameraComponent.Physics=False
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -2568,6 +2591,7 @@ BP_ThirdPersonCharacter_C=
 Hunt_for_bloodCharacter=
 InputAction="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[15]\" "
+CameraComponent="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2582,6 +2606,7 @@ BP_ThirdPersonCharacter_C.Animation=True
 PropertyWrapper.Variable=False
 FbxImportUI.Animation=True
 SkeletalMeshComponent.SkeletalMesh=False
+SpringArmComponent.Rendering=True
 
 [DetailCustomWidgetExpansion]
 PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
@@ -2733,9 +2758,10 @@ K2Node_CallFunction=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_Va
 ActorComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags
 SkeletalMesh=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
 LODInfoUILayout=SkeletalMesh.LOD0.SkeletalMeshSectionListNameLOD_0,SkeletalMesh.LOD0.SkeletalMeshOptimizationSettings,SkeletalMesh.LOD0.LOD Info,SkeletalMesh.LOD0.MeshBuildSettings,SkeletalMesh.ImportSettings.Mesh,SkeletalMesh.ImportSettings.Material,SkeletalMesh.ImportSettings.Miscellaneous,SkeletalMesh.ImportSettings.Transform,SkeletalMesh.ImportSettings.File Path
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint,InputMappingContext.Mappings.ActionMappings./Game/ThirdPerson/Input/Actions/IA_Move.IA_Move
 InputAction=
 K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+CameraComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 
 [AssetEditorToolkitTabLocation]
 /Game/Enemy/BP_EnemySpawn.BP_EnemySpawn=0
@@ -2766,6 +2792,7 @@ K2Node_EnhancedInputAction=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2
 /Game/ThirdPerson/Input/Actions/IA_Sprint.IA_Sprint=1
 /Game/Animation/Runnin_montage.Runnin_montage=0
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
+/Game/ThirdPerson/Input/Actions/IA_Look.IA_Look=1
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3101,7 +3128,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=196.000 Y=82.400
-WindowSize=X=1291.200 Y=731.200
+WindowSize=X=1292.800 Y=732.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
