revision de reg estamina

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1254,28 +1254,29 @@ CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Input/IMC_Default.IMC_Default
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
+OpenAssetsAtExit=/Game/AI/Sword/SwordSlash.SwordSlash
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_Stadistics
-MRUItem1=/Game/ThirdPerson/Input/Actions/IA_Look
-MRUItem2=/Game/ThirdPerson/Input/IMC_Default
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/ThirdPerson/Input/Actions/IA_Sprint
-MRUItem5=/Game/Animation/Running_UE
-MRUItem6=/Game/Animation/Esquivar
-MRUItem7=/Game/Animation/Idle_UE
-MRUItem8=/Game/Chekpoint/Chekpoint
-MRUItem9=/Game/Enemy/Enemy_Health
-MRUItem10=/Game/Enemy/BP_EnemySpawn
-MRUItem11=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
-MRUItem12=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
-MRUItem13=/Game/AI/Sword/Slash
-MRUItem14=/Game/AI/Sword/Sword_Skeleton
-MRUItem15=/Game/AI/Sword/Sword
-MRUItem16=/Game/Enemy/FlyingBack
-MRUItem17=/Game/Enemy/BP_SpeedEnemySpawn
-MRUItem18=/Game/Enemy/DeathDie
-MRUItem19=/Game/Enemy/Death
+MRUItem0=/Game/AI/Sword/SwordSlash
+MRUItem1=/Game/AI/Sword/Slash
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem3=/Game/ThirdPerson/Input/IMC_Default
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem5=/Game/ThirdPerson/Input/Actions/IA_Look
+MRUItem6=/Game/ThirdPerson/Input/Actions/IA_Sprint
+MRUItem7=/Game/Animation/Running_UE
+MRUItem8=/Game/Animation/Esquivar
+MRUItem9=/Game/Animation/Idle_UE
+MRUItem10=/Game/Chekpoint/Chekpoint
+MRUItem11=/Game/Enemy/Enemy_Health
+MRUItem12=/Game/Enemy/BP_EnemySpawn
+MRUItem13=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
+MRUItem14=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
+MRUItem15=/Game/AI/Sword/Sword_Skeleton
+MRUItem16=/Game/AI/Sword/Sword
+MRUItem17=/Game/Enemy/FlyingBack
+MRUItem18=/Game/Enemy/BP_SpeedEnemySpawn
+MRUItem19=/Game/Enemy/DeathDie
 
 [DetailCategories]
 BP_ThirdPersonCharacter_C.TransformCommon=True
@@ -2388,18 +2389,20 @@ CameraComponent.Activation=True
 CameraComponent.Cooking=True
 CameraComponent.Events=True
 CameraComponent.Physics=False
+EditorAnimSegment.Animation Segment=True
+EditorAnimSegment.Montage=True
 
 [DetailPropertyExpansion]
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" "
+DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
 Object="\"Object\" "
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
-AnimSequenceBase="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
-AnimationAsset="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
+AnimSequenceBase="\"Object\" "
+AnimationAsset="\"Object\" "
 AnimMontage="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
 AnimCompositeBase="\"Object\" \"Object.TimeStretchCurve.TimeStretchCurve\" \"Object.TimeStretchCurve.TimeStretchCurve.Sum_dT_i_by_C_i\" "
 CapsuleComponent="\"Object\" "
@@ -2592,6 +2595,7 @@ Hunt_for_bloodCharacter=
 InputAction="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[15]\" "
 CameraComponent="\"Object\" "
+EditorAnimSegment="\"Object\" "
 
 [MRU]
 MRUItem0=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -2793,6 +2797,7 @@ CameraComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_Variab
 /Game/Animation/Runnin_montage.Runnin_montage=0
 /Game/ThirdPerson/Input/IMC_Default.IMC_Default=0
 /Game/ThirdPerson/Input/Actions/IA_Look.IA_Look=1
+/Game/AI/Sword/SwordSlash.SwordSlash=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -3128,7 +3133,7 @@ PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap",
 
 [RootWindow]
 ScreenPosition=X=196.000 Y=82.400
-WindowSize=X=1292.800 Y=732.800
+WindowSize=X=1294.400 Y=734.400
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
