--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -175,7 +175,7 @@ ContentBrowserDrawer.VerticalSplitter.SlotSize1=0.75
 ContentBrowserDrawer.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserDrawer.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserDrawer.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserDrawer.SelectedPaths=/Game/ThirdPerson/Input
+ContentBrowserDrawer.SelectedPaths=/Game/AI/Sword
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 ContentBrowserDrawer.SelectedCollections=
@@ -1250,20 +1250,21 @@ D3D11RHI.TimeStamp=2023.05.18-10.23.38
 D3D11RHI.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_Stadistics.BP_Stadistics
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [ContentBrowserRecent]
 MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/ThirdPerson/Input/IMC_Default
-MRUItem2=/Game/ThirdPerson/Input/Actions/IA_Sprint
-MRUItem3=/Game/Animation/Running_UE
-MRUItem4=/Game/Animation/Esquivar
-MRUItem5=/Game/Animation/Idle_UE
-MRUItem6=/Game/Chekpoint/Chekpoint
-MRUItem7=/Game/Enemy/Enemy_Health
-MRUItem8=/Game/Enemy/BP_EnemySpawn
-MRUItem9=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem1=/Game/ThirdPerson/Blueprints/BP_Stadistics
+MRUItem2=/Game/ThirdPerson/Input/IMC_Default
+MRUItem3=/Game/ThirdPerson/Input/Actions/IA_Sprint
+MRUItem4=/Game/Animation/Running_UE
+MRUItem5=/Game/Animation/Esquivar
+MRUItem6=/Game/Animation/Idle_UE
+MRUItem7=/Game/Chekpoint/Chekpoint
+MRUItem8=/Game/Enemy/Enemy_Health
+MRUItem9=/Game/Enemy/BP_EnemySpawn
 MRUItem10=/Game/ThirdPerson/Blueprints/UI_HuntForBlood
 MRUItem11=/Game/ThirdPerson/Blueprints/Hunt_For_Blood
 MRUItem12=/Game/AI/Sword/Slash
@@ -2575,26 +2576,27 @@ BP_ThirdPersonCharacter_C.Animation=True
 PropertyWrapper.Variable=False
 FbxImportUI.Animation=True
 SkeletalMeshComponent.SkeletalMesh=False
+K2Node_VariableGet.Variable=False
 
 [DetailCustomWidgetExpansion]
-PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+PropertyWrapper=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BP_Spawner_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_VariableGet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BP_EnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BlendSpace1D=BlendSpace1D.Axis Settings.Horizontal Axis
 Ai_anim_BP_C=
 Character=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+K2Node_VariableSet=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 SceneComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 SkeletalMeshComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+BP_ThirdPersonCharacter_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 SpringArmComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 CharacterMovementComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
 WorldPartitionRuntimeSpatialHash=
 EdGraphNode_Comment=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-UI_HuntForBlood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818
+UI_HuntForBlood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+K2Node_FunctionEntry=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 K2Node_FunctionResult=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 EdGraphNode=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 PlayerController=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2602,12 +2604,12 @@ PlayerState=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 CapsuleComponent=
 Hunt_For_Blood_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 ParticleEventManager=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+BP_Stadistics_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 EdGraph=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 HUD=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_InputDebugKey=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_Variable=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
-K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
+K2Node_MacroInstance=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,K2Node_FunctionEntry.Inputs.EC4764024D34551ACA0B5EAC0EFAC818,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 Enemy_Health_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 K2Node_CustomEvent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 WidgetComponent=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
@@ -2615,7 +2617,7 @@ Widget=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BP_TankEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 StaticMeshActor=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 Chekpoint_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
-K2Node=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
+K2Node=PropertyWrapper.DefaultValueCategory.EnemysToSpawn,K2Node_VariableGet.DefaultValueCategory.Tags,K2Node_VariableGet.DefaultValueCategory.CapsuleComponent,SkeletalMeshComponent.Physics.ConstraintsGroup,SkeletalMeshComponent.TransformCommon.Transform
 BP_SpeedEnemySpawn_C=PropertyWrapper.DefaultValueCategory.EnemysToSpawn
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 GeneralProjectSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,IOSRuntimeSettings.Build.Remote Build Options
@@ -3093,8 +3095,8 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=196.000 Y=82.400
-WindowSize=X=1291.200 Y=731.200
+ScreenPosition=X=137.600 Y=0.000
+WindowSize=X=1292.800 Y=732.800
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
